# pyproject.toml
# Python project configuration.

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "buildarr"
version = "0.8.1"
description = "Constructs and configures Arr PVR stacks"
authors = ["Callum Dickinson <callum.dickinson.nz@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://buildarr.github.io"
repository = "https://github.com/buildarr/buildarr"
documentation = "https://buildarr.github.io/"
keywords = [
    "buildarr",
    "sonarr",
    "radarr",
    "prowlarr",
    "jellyseer"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
readme = "README.md"
packages = [{include = "buildarr"}]

[tool.poetry.urls]
"Changes" = "https://buildarr.github.io/plugins/release-notes"
"Issue Tracker" = "https://github.com/buildarr/buildarr/issues"

[tool.poetry.entry-points.scripts]
buildarr = "buildarr.cli.main:main"

[tool.poetry.entry-points."buildarr.plugins"]
# Used by functional tests. Otherwise, disabled and cannot be used.
# Also serves as an example of how to register Buildarr plugins in packages.
dummy = "buildarr.plugins.dummy.plugin:DummyPlugin"
dummy2 = "buildarr.plugins.dummy2.plugin:Dummy2Plugin"

[tool.poetry.dependencies]
aenum = ">=3.1.0" 
click = ">=8.0.4"
importlib-metadata = ">=4.6.0"
pyyaml = ">=6.0"
"pydantic[email]" = ">=2.0.0,<3.0.0"
requests = ">=2.28.0"
schedule = ">=1.1.0"
stevedore = ">=4.0.0"
typing-extensions = ">=4.0.1"
watchdog = ">=3.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
"mkdocstrings[python]" = "0.23.0"

[tool.poetry.group.lint.dependencies]
mypy = "1.7.0"
ruff = "0.3.0"
types-pyyaml = "6.0.12.12"
types-requests = "2.31.0.10"

[tool.poetry.group.test.dependencies]
Flask = ">=3.0.2"
pexpect = ">=4.9.0"
pytest = ">=8.0.2"
pytest-cov = ">=4.1.0"
pytest-httpserver = ">=1.0.10"
pytest-mock = ">=3.12.0"
Werkzeug = ">=3.0.1"


[tool.ruff]
fix = true
output-format = "grouped"
target-version = "py38"
line-length = 100
select = [
    "A",
    "B",
    "BLE",
    "E",
    "F",
    "G",
    "I",
    "INP",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "RUF",
    "S",
    "T10",
    "T20",
    "W",
    "YTT",
]
extend-select = ["COM812", "COM818", "UP009"]
extend-ignore = [
    "A003",
    "B023",
    "N805",
    "N806",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "RUF012",
]

[tool.ruff.isort]
lines-between-types = 1
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.black]
line_length = 100

[tool.mypy]
python_version = "3.8"
pretty = true

[[tool.mypy.overrides]]
module = [
    "json5.*",
    "prowlarr.*",
]
ignore_missing_imports = true